--- a/config/database.yml
+++ b/config/database.yml
@@ -16,6 +16,9 @@ default: &default
 development:
   <<: *default
   database: coolify_dev
+  username: <%= ENV['COOLIFY_DATABASE_USERNAME'] %>
+  password: <%= ENV['COOLIFY_DATABASE_PASSWORD'] %>
+  host: <%= ENV['COOLIFY_DATABASE_HOST'] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
